After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732933 - horizontal autoscrolling broken
horizontal autoscrolling broken
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkTreeView
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtktreeview-bugs
gtktreeview-bugs
Depends on:
Blocks:
 
 
Reported: 2014-07-09 02:00 UTC by Matthias Clasen
Modified: 2014-07-10 01:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
treeview: Fix horizontal position during column dragging (1.71 KB, patch)
2014-07-09 14:27 UTC, Carlos Garnacho
committed Details | Review
treeview: Add back the Gdk pointer grab during column dragging (1.91 KB, patch)
2014-07-09 14:27 UTC, Carlos Garnacho
committed Details | Review

Description Matthias Clasen 2014-07-09 02:00:20 UTC
I can only get the autoscrolling to scroll a few pixels when reordering headers, then it stops - before I am at the end of the horizontal scrollbar.
Comment 1 Carlos Garnacho 2014-07-09 14:27:16 UTC
Created attachment 280276 [details] [review]
treeview: Fix horizontal position during column dragging

Code was expecting view coordinates, not widget ones, as we're
only dealing with horizontal displacements, just adding the
horizontal adjustment value suffices.
Comment 2 Carlos Garnacho 2014-07-09 14:27:21 UTC
Created attachment 280277 [details] [review]
treeview: Add back the Gdk pointer grab during column dragging

The reparenting happening on the column header so it gets a movable
window breaks the implicit grab, so this is one situation were we
want a pointer grab, if just to replace it.
Comment 3 Matthias Clasen 2014-07-10 01:35:36 UTC
Attachment 280276 [details] pushed as 5fb9c44 - treeview: Fix horizontal position during column dragging
Attachment 280277 [details] pushed as edc5cb4 - treeview: Add back the Gdk pointer grab during column dragging